tests/ui/feature-gates/feature-gate-final-associated-functions.stderr
error[E0658]: `final` on trait functions is experimental
  --> $DIR/feature-gate-final-associated-functions.rs:2:5
   |
LL |     final fn bar() {}
   |     ^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(final_associated_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
