tests/ui/feature-gates/feature-gate-final-associated-functions.rs
trait Foo {
    final fn bar() {}
    //~^ ERROR `final` on trait functions is experimental
}

fn main() {}
